# bmstu-oop

./: .gitignore  README.md  pyramid.txt
code/: CMakeLists.txt  converters.cpp  converters.h  file_input.cpp  file_input.h  handler.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  model_data.cpp  model_data.h  model_vector.cpp  model_vector.h  operation_codes.h  point.cpp  point.h  status_codes.h  task.cpp  task.h  task_data.cpp  task_data.h
code/drawer/: drawer.cpp  drawer_impl.cpp
code/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
code/include/: converters.h  drawer.h  drawer_impl.h  file_input.h  model.h  point.h  status_codes.h  task.h  task_data.h
code/model/: model.cpp  model_data.cpp  point.cpp
code/model_input/: file_input.cpp
code/model_view_converters/: converters.cpp  handler.cpp  task.cpp
lab_02/: CMakeLists.txt  main.cpp
lab_02/Exceptions/: BaseException.h  IterExceptions.h  VectorExceptions.h
lab_02/Iterators/: BaseIterator.h  ConstIterator.h  ConstIterator.hpp  ConstReverseIterator.h  ConstReverseIterator.hpp  Iterator.h  Iterator.hpp  ReverseIterator.h  ReverseIterator.hpp
lab_02/Vector/: BaseVector.h  Vector.h  Vector.hpp  VectorConcepts.h
lab_03/: CMakeLists.txt  lab3.drawio  main.cpp  uml.drawio
lab_03/api/: Facade.cpp  Facade.hpp
lab_03/api/commands/: BaseCommand.cpp  BaseCommand.hpp  ChangeCameraCommand.cpp  ChangeCameraCommand.hpp  DrawCommand.cpp  DrawCommand.hpp  LoadCommand.cpp  LoadCommand.hpp  RemoveObjectCommand.cpp  RemoveObjectCommand.hpp  SelectCommand.cpp  SelectCommand.hpp  TransformActiveCameraCommand.cpp  TransformActiveCameraCommand.hpp  TransformCommand.cpp  TransformCommand.hpp  UnselectCommand.cpp  UnselectCommand.hpp
lab_03/api/exceptions/: NotACameraException.cpp  NotACameraException.hpp  NotFoundException.hpp
lab_03/api/facade/: Facade.cpp  Facade.hpp
lab_03/api/managers/: ActiveCameraManager.cpp  ActiveCameraManager.hpp  DrawManager.cpp  DrawManager.hpp  LoadingManager.cpp  LoadingManager.hpp  RemoveObjectManager.cpp  RemoveObjectManager.hpp  SceneManager.cpp  SceneManager.hpp  SelectionManager.cpp  SelectionManager.hpp  TransformActiveCameraManager.cpp  TransformActiveCameraManager.hpp  TransformManager.cpp  TransformManager.hpp
lab_03/core/: Scene.cpp  Scene.hpp
lab_03/core/creators/: CameraCreator.cpp  CameraCreator.hpp  ListMeshFigureDirector.cpp  ListMeshFigureDirector.hpp  MatrixMeshFigureDirector.cpp  MatrixMeshFigureDirector.hpp  MeshFigureCreator.cpp  MeshFigureCreator.hpp  PlainCameraDirector.cpp  PlainCameraDirector.hpp  SceneObjectCreator.cpp  SceneObjectCreator.hpp  SceneObjectCreatorSolution.hpp
lab_03/core/creators/buffers/: CameraBuffer.cpp  CameraBuffer.hpp  MeshFigureBuffer.cpp  MeshFigureBuffer.hpp
lab_03/core/creators/builders/: ListMeshFigureBuilder.cpp  ListMeshFigureBuilder.hpp  MatrixMeshFigureBuilder.cpp  MatrixMeshFigureBuilder.hpp  PlainCameraBuilder.cpp  PlainCameraBuilder.hpp
lab_03/core/exceptions/: NotImplementedException.cpp  NotImplementedException.hpp
lab_03/core/graphics/: Canvas.cpp  Canvas.hpp  GraphicFactory.cpp  GraphicFactory.hpp  GraphicPoint.cpp  GraphicPoint.hpp  Graphics.cpp  Graphics.hpp  Painter.cpp  Painter.hpp  QtCanvas.cpp  QtCanvas.hpp  QtGraphicFactory.cpp  QtGraphicFactory.hpp  QtGraphicPoint.cpp  QtGraphicPoint.hpp  QtGraphics.cpp  QtGraphics.hpp  QtPainter.cpp  QtPainter.hpp
lab_03/core/objects/: Point.hpp  SceneComposite.cpp  SceneComposite.hpp  SceneObject.cpp  SceneObject.hpp
lab_03/core/objects/Camera/: BasePlainCameraImpl.cpp  BasePlainCameraImpl.hpp  Camera.cpp  Camera.hpp  PlainCamera.cpp  PlainCamera.hpp  PlainCameraImpl.cpp  PlainCameraImpl.hpp
lab_03/core/objects/Figure/: BaseListMeshFigureImpl.cpp  BaseListMeshFigureImpl.hpp  BaseMatrixMeshFigureImpl.cpp  BaseMatrixMeshFigureImpl.hpp  Figure.cpp  Figure.hpp  ListMeshFigure.cpp  ListMeshFigure.hpp  ListMeshFigureImpl.cpp  ListMeshFigureImpl.hpp  MatrixMeshFigure.cpp  MatrixMeshFigure.hpp  MatrixMeshFigureImpl.cpp  MatrixMeshFigureImpl.hpp
lab_03/core/visitor/: DrawVisitor.cpp  DrawVisitor.hpp  Drawer.cpp  Drawer.hpp  SceneObjectVisitor.cpp  SceneObjectVisitor.hpp  TransformData.hpp  TransformVisitor.cpp  TransformVisitor.hpp  Transformer.cpp  Transformer.hpp
lab_03/data/: pyramid.txt
lab_03/loader/: BaseSceneBuilder.cpp  BaseSceneBuilder.hpp  BaseSceneLoader.cpp  BaseSceneLoader.hpp  StreamSceneBuilder.cpp  StreamSceneBuilder.hpp  StreamSceneLoader.cpp  StreamSceneLoader.hpp
lab_03/loader/creator/: SceneLoaderCreator.cpp  SceneLoaderCreator.hpp  SceneLoaderCreatorSolution.cpp  SceneLoaderCreatorSolution.hpp  StreamSceneLoaderCreator.cpp  StreamSceneLoaderCreator.hpp
lab_03/loader/exceptions/: BadFileException.cpp  BadFileException.hpp  CantOpenFileException.hpp  OutOfBondsException.hpp
lab_03/loader/reader/: BaseMeshFigureReader.cpp  BaseMeshFigureReader.hpp  CameraReader.cpp  CameraReader.hpp  MeshFigureReader.cpp  MeshFigureReader.hpp  PlainCameraReader.cpp  PlainCameraReader.hpp
lab_03/loader/reader/creator/: BaseMeshFigureReaderCreator.cpp  BaseMeshFigureReaderCreator.hpp  BaseMeshFigureReaderCreatorSolution.cpp  BaseMeshFigureReaderCreatorSolution.hpp  CameraReaderCreator.cpp  CameraReaderCreator.hpp  CameraReaderCreatorSolution.cpp  CameraReaderCreatorSolution.hpp  MeshFigureReaderCreator.cpp  MeshFigureReaderCreator.hpp  PlainCameraReaderCreator.cpp  PlainCameraReaderCreator.hpp
lab_03/loader/reader/impl/: CameraReaderImpl.cpp  CameraReaderImpl.hpp  MeshFigureReaderImpl.cpp  MeshFigureReaderImpl.hpp  ObjCameraReaderImpl.cpp  ObjCameraReaderImpl.hpp  ObjMeshFigureReaderImpl.cpp  ObjMeshFigureReaderImpl.hpp  ObjPlainCameraReaderImpl.cpp  ObjPlainCameraReaderImpl.hpp  PlainCameraReaderImpl.cpp  (+7 more)
lab_03/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_03/util/: BaseException.hpp  concepts.hpp
lab_04/: CMakeLists.txt  Cabin.cpp  Cabin.hpp  Config.hpp  Controller.cpp  Controller.hpp  Doors.cpp  Doors.hpp  Elevator.cpp  Elevator.hpp  TimerInfo.hpp  dps.drawio  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+44 files in other folders)
